[gd_scene load_steps=9 format=3 uid="uid://nkil5y42ejrk"]

[ext_resource type="Script" path="res://battle_systems/UI/AttackPrompt/attack_prompt.gd" id="1_f6xd2"]
[ext_resource type="StyleBox" uid="uid://djticqr5bm1ud" path="res://ui/Themes/PagePanel.tres" id="1_qihvo"]
[ext_resource type="FontFile" uid="uid://bn1yp4fkor0tt" path="res://assets/fonts/Handwriting_V2-Regular.ttf" id="2_vcm04"]

[sub_resource type="Animation" id="Animation_coh1b"]
resource_name = "SlideIn"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-236, 0), Vector2(0, 0), Vector2(17, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="Animation" id="Animation_0au3m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-236, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5iw2n"]
_data = {
"RESET": SubResource("Animation_0au3m"),
"SlideIn": SubResource("Animation_coh1b")
}

[sub_resource type="LabelSettings" id="LabelSettings_57e6l"]
font = ExtResource("2_vcm04")
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6t8u8"]
font = ExtResource("2_vcm04")
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="AttackPrompt" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_f6xd2")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_5iw2n")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = -236.0
offset_right = -8.0
offset_bottom = 67.0
theme_override_styles/panel = ExtResource("1_qihvo")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="UserLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Blob"
label_settings = SubResource("LabelSettings_57e6l")

[node name="Used" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "used"
label_settings = SubResource("LabelSettings_6t8u8")

[node name="AttackLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Stick!"
label_settings = SubResource("LabelSettings_57e6l")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
